--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,10 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 foo = bar
+# Default database configuration using MySQL database engine
+# Connect to scalatestdb as testuser
+slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost/scalatestdb"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password="a@123456"
