--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,6 +5,6 @@ foo = bar
 # Connect to scalatestdb as testuser
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost/scalatestdb"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/scalatestdb?autoReconnect=true&useSSL=false"
 slick.dbs.default.db.user = "root"
 slick.dbs.default.db.password="a@123456"
