--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,4 +7,4 @@ slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/scalatestdb?autoReconnect=true&useSSL=false"
 slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password="a@123456"
+slick.dbs.default.db.password="a@1234567"
