--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,7 +4,7 @@ foo = bar
 # Default database configuration using MySQL database engine
 # Connect to scalatestdb as testuser
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
-slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver3"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/scalatestdb?autoReconnect=true&useSSL=false"
-slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password="a@1234567"
+slick.dbs.default.db.user = "root2"
+slick.dbs.default.db.password="a@12345678"
