--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,5 +6,5 @@ foo = bar
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver3rew"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/rwerscalatestdb?autoReconnect=true&useSSL=false"
-slick.dbs.default.db.user = "root22sfd"
-slick.dbs.default.db.password="a@1234567fsd83"
+slick.dbs.default.db.user = "root22"
+slick.dbs.default.db.password="a@1234567"
