--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,5 +6,5 @@ foo = bar
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver3"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/scalatestdb?autoReconnect=true&useSSL=false"
-slick.dbs.default.db.user = "root52"
+slick.dbs.default.db.user = "3"
 slick.dbs.default.db.password="a@1234562"
